Update index.html for Cryptanalysis project

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   
   <head>
-    <title>Spoof by kpoovakan</title>
+    <title>Cryptanalysis by kpoovakan</title>
     <style>
       body {
         margin: 45px;
@@ -18,24 +18,17 @@
   </head>
   <body>
 <!--Header-->
-    <h1>Spoof</h1>
-    <h2>A collection of Spoofs by kpoovakan</h2>
+    <h1>Cryptanalysis</h1>
+    <h2>A collection of cryptography and cryptanalysis tools by kpoovakan</h2>
     <hr>
     </br>
 <!--Content-->
-    <h2>Rickrolls</h2>
-    <p><a href="https://kpoovakan.github.io/OnlineLibrary">Online Library</a></p>
-    <p><a href="https://kpoovakan.github.io/SparkLabs">Spark Labs</a></p>
-    <p><a href="https://kpoovakan.github.io/CraftoArtSupplies">Crafto Art Supplies</a></p>
-    </br>
-    <h2>Miscellaneous Practical Jokes</h2>
-    <p><a href="https://kpoovakan.github.io/PracticalJoke">Screen Cover For Tablet</a></p>
+    <p><a href="https://kpoovakan.github.io/VigenereTableau/">The Vigenère Tableau</a></p>
 <!--Footer-->
     </br>
     <hr>
-    <h2>Spoof</h2>
-    <p>Created by <a href="https://github.com/kpoovakan">kpoovakan</a></p>
+    <h2>Cryptanalysis</h2>
+    <p>Created by <a href="https://kpoovakan.github.io">kpoovakan</a></p>
   </body>
 
 </html>
-
