Update index.html with favicon and new link
Added a favicon link and a new link for Caesar Cipher.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   
   <head>
     <title>Cryptanalysis by kpoovakan</title>
+    <link rel="icon" href="https://github.com/kpoovakan/Cryptanalysis/blob/main/favicon.png" />
     <style>
       body {
         margin: 45px;
@@ -24,6 +25,7 @@
     </br>
 <!--Content-->
     <p><a href="https://kpoovakan.github.io/VigenereTableau/">The Vigenère Tableau</a></p>
+    <p><a href="https://kpoovakan.github.io/CaesarCipher/">Caesar Cipher</a></p>
 <!--Footer-->
     </br>
     <hr>
@@ -32,3 +34,4 @@
   </body>
 
 </html>
+
