--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
   <head>
     <title>Cryptanalysis by kpoovakan</title>
-    <link rel="icon" href="https://github.com/kpoovakan/Cryptanalysis/blob/main/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="/favicon.png">
     <style>
       body {
         margin: 45px;
@@ -34,4 +34,5 @@
   </body>
 
 </html>
+
 
